[package]
name = "solar-system"
version = "0.2.0"
edition = "2021"

#[features]
#wasm = ["dep:console_error_panic_hook", "dep:wasm-bindgen"]

[dependencies]
bevy = { version = "0.14", features = ["wayland"] }
bevy_framepace = "0.17"
bevy_mod_billboard = "0.7"
#console_error_panic_hook = { version = "0.1", optional = true }
nalgebra = "0.33"
#wasm-bindgen = { version = "0.2", optional = true }
