[package]
name = "solar-system"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
	"bevy_pbr", "default_font", "multi_threaded", "tonemapping_luts", "wayland", "webgl2",
] }
bevy_framepace = "0.17"
bevy_mod_billboard = "0.7"
nalgebra = "0.33"
uom = "0.36"
